GetClientById in Client API created
